# thermtypst

./: .gitignore  README.md  escpos-config.yaml.example  flake.nix  pyproject.toml
example/: escpos-config.yaml  render_to_file.py
example/typst/: main.typ  note_template.typ
src/thermtypst/: note.py  printer.py
